--- a/about.html
+++ b/about.html
@@ -21,28 +21,32 @@
     
     <title>Barbershop</title>
 
-
+    <!--Enlace FontAwesome-->
+    <script src="https://kit.fontawesome.com/f2c1799cf6.js" title="Link FontAwesome" crossorigin="anonymous"></script>
     <!--Favicon-->
     <link rel="shortcut icon" href="/img/Logo.ico" type="image/x-icon" title="Link Favicon">
     <!--Enlace CSS-->
-    <link rel="stylesheet" href="/css/style.css" title="Enlace Hoja de estilos">
+    <link rel="stylesheet" href="/css/style.css" title="Link Hoja de estilos">
     <!--Enlace Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
-  <body>
+<body>
 
 <!--NAV HEADER-->
 
 
 <header>
-  <img class="logo" src="/img/Logo.png" alt="Logo barberia Mandala">
+  <div class="content-logo-nav">
+    <img class="logo" src="/img/Logo.png" alt="Logo barberia Mandala">
     <a class="text-logo" href="/contact.html" title="redireccionador a contacto Mandala">Mandala</a>
+  </div>
   <input type="checkbox" id="nav-toggle" class="nav-toggle" />
   <nav>
     <ul>
       <li><a href="/index.html" title="Enlace sección inicio">Home</a></li>
       <li><a href="/services.html"title="Enlace sección servicios">Servicios</a></li>
       <li><a href="/about.html" title="Enlace sección nosotros">Nosotros</a></li>
+      <li><a href="/Products.html" title="Enlace sección Productos">Productos</a></li>
       <li><a href="/contact.html" title="Enlace sección contacto">Contacto</a></li>
     </ul>
   </nav>
@@ -52,7 +56,7 @@
 </header>
 
 
-<!--INICIO BODY-->
+<!--INICIO BODY-HEADER-->
 
 
     <div class="header-about">
@@ -89,49 +93,86 @@
                   <div class="inner-column wow fadeInLeft">
                     </div>
                       <figure class="image-1">
-                        <a href="/contact.html" class="lightbox-image" title="Link contacto Mandala">
-                        <img src="/img/AboutUs.jpg" alt="Imagen fondo nosotros barberia Mandala"></a>
+                        <a href="/contact.html"  title="Link contacto Mandala">
+                        <img class="lightbox-image" src="/img/AboutUs.jpg" alt="Imagen fondo nosotros barberia Mandala">
+                        </a>
                       </figure>
                   </div>
               </div>
           </div>
-  </section>
-
-</section>    
+</section>
 
 <!--FIN SECCION CAJA CONTACTO-->
 
-<!--INICIO SECCION FOOTER-->
- 
-    <footer>
-      <div class="grupo-1">
-        <div class="box">
-          <figure>
-            <a href="/contact.html" title="Redireccionador contacto Mandala"><img class="imagenfooter" src="/img/Logo.png" alt="Logo barberia Mandala"></a>
-          </figure>
-        </div>
-        <div class="box">
-          <h6>SOBRE NOSOTROS</h6>
-          <P>Somos mas que un equipo, somos una familia enfocada en
-            ofrecer confianza y tranquilidad al genero masculino, nuestro establecimiento hace honor a la geometría sagrada 
-            de ahi salió "MANDALA"-BarberShop siendo asi un espacio de calma y relajación un lugar donde nuestros clientes salen renovados.</P>
-          <p>No solo somos una barberia
-            somos un estilo de vida.</p>
-        </div>
-        <div class="box">
-          <h6>SIGUENOS</h6>
-          <div class="redsocial">
-            <a href="https://github.com/Danielgbit/Segunda-pre-entrega-CODER.git" title="Link github personal"><img src="/img/github.png" alt="Icono github"></a>
-            <a href="https://goo.gl/maps/TVYEpce9By96cRbW7" title="Ubicacion barberia Mandala" ><img src="/img/local.png" alt="Icono ubicacion barberia Mandala"></a>
-          </div>
-        </div>
-      </div>
-      <div class="grupo-2">
-        <small>&copy; 2022 <b>MANDALA</b> - Todos los derechos resevados.</small>
-      </div>
-    </footer>
-    
-<!--Fin Footer-->
 
-  </body>
+<!--INICIO SECCION EQUIPO-->
+
+<section class="body-team">
+  <h2>Equipo</h2>
+  <div class="testimonials">
+    <div class="card">
+        <div class="c-title">Anderson</div><br><span>Barbero profesional</span>
+          <img src="/img/Barbero-1.png" alt="Barbero profesional medellin">
+        <div class="description">
+            <p>La versatilidad en su técnica le permite manejar estilos clásicos y modernos. Un apasionado por definir y pulir con tijera la barba y el cabello de cada cliente de forma excepcional.</p>
+      </div>
+    </div>
+
+    <div class="card">
+        <div class="c-title">Camilo</div><br><span>Barbero profesional</span>
+          <img src="/img/Barbero-2.png" alt="Barbero profesional medellin">
+        <div class="description">
+            <p>Su pasión es la barbería clásica. Sus fuertes son: la dedicación, el detalle y la técnica. Pilares para que cada servicio se convierta en la mejor experiencia y el mejor resultado.</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="c-title">Felipe</div><br><span>Barbero profesional</span>
+          <img src="/img/Barbero-3.png" alt="Barbero profesional medellin">
+        <div class="description">
+            <p>Especialista en asesoría de imagen con versatilidad y habilidad para manejar cualquier tipo de barba y corte de cabello. Su objetivo principal es que cada cliente viva la mejor experiencia y obtenga un look increíble.</p>
+        </div>
+    </div>
+</div>
+
+<!--FIN SECCION EQUIPO-->
+
+
+<!--INICIO SECCION FOOTER-->
+
+<footer>
+  <div class="grupo-1">
+    <div class="container-logo">
+      <figure>
+        <a href="/contact.html" title="Redireccionador contacto Mandala"><img class="imagenfooter" src="/img/Logo.png" alt="Logo barberia Mandala"></a>
+      </figure>
+    </div>
+    <div class="box">
+      <h3>SOBRE NOSOTROS</h3>
+      <P>Somos mas que un equipo, somos una familia enfocada en
+        ofrecer confianza y tranquilidad al genero masculino, nuestro establecimiento hace honor a la geometría sagrada 
+        de ahi salió "MANDALA"-BarberShop siendo asi un espacio de calma y relajación un lugar donde nuestros clientes salen renovados.</P>
+      <p>No solo somos una barberia
+        somos un estilo de vida.</p>
+    </div>
+    <div class="box">
+      <h3>SIGUENOS</h3>
+      <div class="redsocial">
+        <a href="https://github.com/Danielgbit/Segunda-pre-entrega-CODER.git" title="Link github personal"><img class="iconos" src="/img/github.png" alt="Icono github"></a>
+        <a href="https://goo.gl/maps/TVYEpce9By96cRbW7" title="Ubicacion barberia Mandala" ><img class="iconos" src="/img/local.png" alt="Icono ubicacion barberia Mandala"></a>
+      </div>
+    </div>
+  </div>
+  <div class="grupo-2">
+    <small>&copy; 2022 <b>MANDALA</b> - Todos los derechos resevados.</small>
+  </div>
+</footer>
+<!--FIN FOOTER-->
+
+</section>
+
+<!--LINK BOOSTRAP-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</body>
+
 </html>
